# Kulyk-goit-PythonWeb-HW-09

./: authors.json  beautyful_soup_scraping.py  create.py  main.py  models.py  pyproject.toml  readme.txt
